# mantis_pub

./: empty_world_simulation.sh  install.sh  mantis.desktop  mantis_simulation.sh  mantis_vizualizer.sh  readme.txt
proj/mantis_master/mantis_control/: CMakeLists.txt  package.xml
proj/mantis_master/mantis_on_rack/: package.xml
proj/mantis_master/mantis_sim/: CMakeLists.txt  README.txt  ToDo.txt  package.xml
proj/mantis_master/mantis_sim/launch/: display.launch  mantis_gazebo.launch
proj/mantis_master/mantis_sim/mesh/: 122B-001-002.dae  122B-001-020.dae  122B-001-021.dae  122B-001-022.dae  122B-001-023.dae  122B-001-027.dae  122B-001-050.dae  122B-001-057.dae  122B-001-073.dae  B0.dae  B1.dae  B2.dae  B3.dae  B4.dae  B5.dae  B6.dae  B7.dae  B8.dae  Base_Plate.STL  base_elbow.STL  base_to_link.STL  joint.STL  link.STL  wrist_attachment.STL
proj/mantis_master/mantis_sim/rviz/: urdf.rviz
proj/mantis_master/mantis_sim/src/: MANTIS_example
proj/mantis_master/mantis_sim/urdf/: mantis_model.urdf  mantis_standalone.urdf.xacro  model.gazebo  model.urdf.xacro  modular_model.urdf.xacro
src/mantis/: CMakeLists.txt  package.xml
src/mantis/launch/: arm.gazebo.launch  arm.rviz.launch  arm_control.launch  settings.rviz
src/mantis/meshes/: B1.dae  B2.dae  B3.dae  B4.dae  B5.dae  B6.dae  B7.dae  B8.dae  base.dae  gripper_static.dae  micro_plate.dae
src/mantis/model/: arm.urdf  arm_control.yaml  arm_control_trajectory.yaml  arm_gazebo.urdf.xacro  arm_gazebo_default.urdf  arm_gazebo_default.urdf.xacro  arm_rviz.urdf.xacro
src/mantis_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mantis_on_rack/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/mantis_on_rack/launch/: ISS.world  (+6 more)
src/mantis_on_rack_moveit/: .setup_assistant  package.xml
src/moveit_no_grip/: .setup_assistant  CMakeLists.txt  package.xml
(+83 files in other folders)
